tests/NormalTests/paczka1/fuzzy1/88234277.err
Error in line 26: 9Yb A246 89,4
Error in line 32: KFbJp3 A881 40,92
Error in line 17: xuWeH A246 71,5
Error in line 31: 7BD290B9ko A167 81,4
Error in line 33: KFbJp3 A881 70,5
